# testmail

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  helpers.py  main.py  models.py  sender.py  settings.py
tests/: test_main.py
